--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/DarkTheme">
         <activity android:name=".OptionsActivity"></activity>
         <activity android:name=".LevelSelectorActivity" />
         <activity android:name=".CrosswordActivity" />
