--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.myapplication2"
+        applicationId "com.proyecto.cruzando"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
