--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication2">
+    package="com.proyecto.cruzando">
 
     <application
         android:allowBackup="true"
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/DarkTheme">
-        <activity android:name=".WinActivity"></activity>
-        <activity android:name=".OptionsActivity" />
-        <activity android:name=".LevelSelectorActivity" />
-        <activity android:name=".CrosswordActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.proyecto.cruzando.WinActivity"></activity>
+        <activity android:name="com.proyecto.cruzando.OptionsActivity" />
+        <activity android:name="com.proyecto.cruzando.LevelSelectorActivity" />
+        <activity android:name="com.proyecto.cruzando.CrosswordActivity" />
+        <activity android:name="com.proyecto.cruzando.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
